--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gsap": "^3.6.1",
     "html-loader": "^2.1.1",
     "html-webpack-plugin": "^5.2.0",
+    "imagesloaded": "^4.1.4",
     "load-asset": "^1.2.0",
     "mini-css-extract-plugin": "^1.3.9",
     "portfinder-sync": "0.0.2",
